# arcgisplaces

./: .Rbuildignore  .gitignore  404.html  DESCRIPTION  LICENSE.html  NAMESPACE  NEWS.md  README.Rmd  README.md  _pkgdown.yml  authors.html  cran-comments.md  index.html  pkgdown.yml  search.json  sitemap.xml
.github/workflows/: R-CMD-check.yaml  cran-checks.yaml  rhub.yaml
R/: arcgisplaces-package.R  core-categories.R  core-category-details.R  core-near-point.R  core-place-details.R  core-place.R  core-within-extent.R  data.R  extendr-wrappers.R  utils.R
data/: fields.rda
data-raw/: all_categories.R  categories.R  fields.R
dev/: dev.R  near-point.R  shiny-no-search-bar.R  shiny-search-bar.R  test-near-point.R
man/: arcgisplaces-package.Rd  categories.Rd  category_details.Rd  fields.Rd  near_point.Rd  near_point_ptype.Rd  parse_category_details.Rd  place_details.Rd  within_extent.Rd
news/: index.html
reference/: arcgisplaces-package.html  categories.html  category_details.html  fields.html  index.html  near_point.html  near_point_ptype.html  parse_category_details.html  place_details.html  within_extent.html
src/: Makevars  Makevars.in  Makevars.win  Makevars.win.in  arcgisplaces-win.def  configure  entrypoint.c
src/rust/: Cargo.toml
src/rust/src/: categories.rs  category_details.rs  lib.rs  nearpoint.rs  place_details.rs  within_extent.rs
tools/: check.env
