[package]
name = 'arcgisplaces'
publish = false
version = '0.1.0'
edition = '2021'

[lib]
crate-type = ['staticlib']
name = 'arcgisplaces'

[dependencies]
extendr-api = { version = '0.7.1' }
serde_esri = { version = "0.3.1", features = ["places-client"] }
serde_json = "1.0.116"

[profile.release]
lto = true
codegen-units = 1
